@@ -71,6 +71,31 @@ class RemotePaymillTest < Test::Unit::TestCase
     assert_equal 'Access Denied', response.message
   end
 
+  def test_successful_store_and_purchase
+    store = @gateway.store(@credit_card)
+    assert_success store
+    assert_not_nil store.authorization
+
+    purchase = @gateway.purchase(@amount, store.authorization)
+    assert_success purchase
+  end
+
+  def test_failed_store_with_invalid_card
+    @credit_card.number = ''
+    assert response = @gateway.store(@credit_card)
+    assert_failure response
+    assert_equal 'Account or Bank Details Incorrect', response.message
+  end
+
+  def test_successful_store_and_authorize
+    store = @gateway.store(@credit_card)
+    assert_success store
+    assert_not_nil store.authorization
+
+    authorize = @gateway.authorize(@amount, store.authorization)
+    assert_success authorize
+  end
+
   # Paymill doesn't yet offer a way to trigger a decline on a test account.
   # def test_failed_purchase_with_declined_credit_card
     # assert response = @gateway.purchase(@amount, @declined_card)
